# CW1

./: ADD.ASM  HELLO.ASM  calculations.ASM  shift.ASM  words.ASM
HW4/: CMakeLists.txt  main.cpp  Отчет. ДЗ4.docx
Microproject_2/: CMakeLists.txt  main.cpp  ПЗ. Микропроект_2.docx
Домашняя работа №1/: ADD.ASM  HELLO.ASM  calculations.ASM  shift.ASM  words.ASM
Домашняя работа №2/: Arrays.ASM  Отчет.docx
Микропроект/: Microproject.ASM  Microproject.inc
Микропроект_2/: MP_2.cpp
Микропроект_2/MP_2/Debug/: MP_2.ilk
Микропроект_2/MP_2/MP_2/Debug/: MP_2.exe.recipe  mp_2.obj.enc
Микропроект_2/MP_2/MP_2/Debug/MP_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MP_2.lastbuildstate  MP_2.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
